--- a/sv-cv.tex
+++ b/sv-cv.tex
@@ -179,18 +179,18 @@
 {\keyword{var} \variable{Profile} \texttt{=}}\\
 {\texttt{[]}\keyword{string}}\\
 {\texttt{\{}}\\
-{\hspace{0.5cm}\stringval{CTF}\\
-{\hspace{0.5cm}\stringval{Tävlande\texttt{,}}\\
-{\hspace{0.5cm}\stringval{Sport}\\
-{\hspace{0.5cm}\stringval{Entusiast\texttt{,}}\\
-{\hspace{0.5cm}\stringval{Musik}\\
-{\hspace{0.5cm}\stringval{Älskare\texttt{,}}\\
-{\hspace{0.5cm}\stringval{Kulinarisk}\\
-{\hspace{0.5cm}\stringval{Upptäcktsresande\texttt{,}}\\
-{\hspace{0.5cm}\stringval{Djur}\\
-{\hspace{0.5cm}\stringval{Vän\texttt{,}}\\
-{\hspace{0.5cm}\stringval{Familje}\\
-{\hspace{0.5cm}\stringval{Orienterad}\\
+{\hspace{0.5cm}\stringval{CTF}}\\
+{\hspace{0.5cm}\stringval{Tävlande}\texttt{,}\\
+{\hspace{0.5cm}\stringval{Sport}}\\
+{\hspace{0.5cm}\stringval{Entusiast}\texttt{,}\\
+{\hspace{0.5cm}\stringval{Musik}}\\
+{\hspace{0.5cm}\stringval{Älskare}\texttt{,}\\
+{\hspace{0.5cm}\stringval{Kulinarisk}}\\
+{\hspace{0.5cm}\stringval{Upptäcktsresande}\texttt{,}\\
+{\hspace{0.5cm}\stringval{Djur}}\\
+{\hspace{0.5cm}\stringval{Vän}\texttt{,}\\
+{\hspace{0.5cm}\stringval{Familje}}\\
+{\hspace{0.5cm}\stringval{Orienterad}}\\
 {\texttt{\}}}
 
 \switchcolumn
@@ -228,8 +228,8 @@
 \vspace{0.1cm}
 {
 \hspace{0.5cm}\texttt{\{}\\
-\hspace{1cm}\variable{universitet} \texttt{:=} \stringval{Nationella tekniska universitetet i}\\
-\hspace{1cm}\phantom{\variable{universitet} \texttt{:=} }\stringval{Ukraina}\\
+\hspace{1cm}\variable{universitet} \texttt{:=} \stringval{Nationella tekniska universitetet}\\
+\hspace{1cm}\phantom{\variable{universitet} \texttt{:=} }\stringval{i Ukraina}\\
 \hspace{1cm}\variable{område} \texttt{:=} \stringval{Informationssystem och cybersäkerhet}\\
 \hspace{1cm}\variable{varaktighet} \texttt{:=} \method{Range}\texttt{(}\stringval{2018}\texttt{,} \stringval{2022}\texttt{)}\\
 \hspace{0.5cm}\texttt{\}}\\
@@ -245,13 +245,13 @@
 {
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\stringval{OffSec Certifierad professionell+ (OSCP+)}\\
-\hspace{1cm}\comment{// Utfärdad: Dec 2025}\\
+\hspace{1cm}\comment{// Utfärdad: dec 2025}\\
 \hspace{1cm}\stringval{Microsoft-certifierad: Azure-grunder}\\
-\hspace{1cm}\comment{// Utfärdad: Okt 2022}\\
+\hspace{1cm}\comment{// Utfärdad: okt 2022}\\
 \hspace{1cm}\stringval{AWS-certifierad DevOps-ingenjör – Professional}\\
-\hspace{1cm}\comment{// Utfärdad: Aug 2022}\\
+\hspace{1cm}\comment{// Utfärdad: aug 2022}\\
 \hspace{1cm}\stringval{Certifierad Kubernetes-administratör (CKA)}\\
-\hspace{1cm}\comment{// Utfärdad: May 2022}\\
+\hspace{1cm}\comment{// Utfärdad: maj 2022}\\
 \hspace{0.5cm}\texttt{\}}\\
 }
 {\texttt{\}}}
@@ -267,9 +267,9 @@
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\variable{befattning}\texttt{:} \stringval{Programvarutestingenjör}\texttt{,}\\
 \hspace{1cm}\variable{företag}\texttt{:} \stringval{ARC AUTOMOTIVE, INC.}\texttt{,}\\
-\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{Maj 2023}\texttt{,} \stringval{Maj 2024}\texttt{),}\\
+\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{maj 2023}\texttt{,} \stringval{maj 2024}\texttt{),}\\
 \hspace{1cm}\comment{// 1 år 1 mån}\\
-\hspace{1cm}\variable{plats}\texttt{:} \stringval{Malmö, Sverige\texttt{,}\\
+\hspace{1cm}\variable{plats}\texttt{:} \stringval{Malmö, Sverige}\texttt{,}\\
 \hspace{1cm}\variable{typ}\texttt{:} \variable{Heltid}\texttt{,}\\
 \hspace{1cm}\comment{/* ADAS-testingenjör med praktisk erfarenhet}\\
 \hspace{1cm}\comment{testning av fordon från Smart, MG och XPENG.}\\
@@ -286,11 +286,11 @@
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\variable{befattning}\texttt{:} \stringval{DevOps-ingenjör}\texttt{,}\\
 \hspace{1cm}\variable{företag}\texttt{:} \stringval{Plejd AB}\texttt{,}\\
-\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{Nov 2022}\texttt{,} \stringval{Apr 2023}\texttt{),}\\
+\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{nov 2022}\texttt{,} \stringval{apr 2023}\texttt{),}\\
 \hspace{1cm}\comment{// 6 mån}\\
-\hspace{1cm}\variable{plats}\texttt{:} \stringval{Göteborg, Sverige\texttt{,}\\
+\hspace{1cm}\variable{plats}\texttt{:} \stringval{Göteborg, Sverige}\texttt{,}\\
 \hspace{1cm}\variable{typ}\texttt{:} \variable{Praktikant}\texttt{,}\\
-\hspace{1cm}\comment{/* Distribuerade och integrerade sårbarhetsskannrar}\\
+\hspace{1cm}\comment{/* Distribuerade och integrerade sårbarhetsskanners}\\
 \hspace{1cm}\comment{inom Kubernetes-kluster med Kube-bench och}\\
 \hspace{1cm}\comment{Trivy-Operator. Översatte skanningsresultat till}\\
 \hspace{1cm}\comment{åtgärdsbara insikter integrerade i DefectDojo}\\
@@ -304,13 +304,13 @@
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\variable{befattning}\texttt{:} \stringval{Salesforce-utvecklare}\texttt{,}\\
 \hspace{1cm}\variable{företag}\texttt{:} \stringval{Polytech Software Ltd}\texttt{,}\\
-\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{Jun 2021}\texttt{,} \stringval{Aug 2021}\texttt{),}\\
+\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{jun 2021}\texttt{,} \stringval{aug 2021}\texttt{),}\\
 \hspace{1cm}\comment{// 3 mån}\\
-\hspace{1cm}\variable{plats}\texttt{:} \stringval{Kiev, Ukraina\texttt{,}\\
+\hspace{1cm}\variable{plats}\texttt{:} \stringval{Kiev, Ukraina}\texttt{,}\\
 \hspace{1cm}\variable{typ}\texttt{:} \variable{Praktikant}\texttt{,}\\
 \hspace{1cm}\comment{/* Designade och utvecklade anpassade lösningar}\\
-\hspace{1cm}\comment{inom Salesforce. Arbetade med fullständig applikations-}\\
-\hspace{1cm}\comment{livscykel: planering, analys, design,}\\
+\hspace{1cm}\comment{inom Salesforce. Arbetade med fullständig}\\
+\hspace{1cm}\comment{applikationslivscykel: planering, analys, design,}\\
 \hspace{1cm}\comment{implementering, testning, distribution. Utvecklade}\\
 \hspace{1cm}\comment{lösningar med Apex, Triggers, Visualforce,}\\
 \hspace{1cm}\comment{Lightning Components. Designade automatiserade}\\
@@ -323,14 +323,14 @@
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\variable{befattning}\texttt{:} \stringval{Inspektör}\texttt{,}\\
 \hspace{1cm}\variable{företag}\texttt{:} \stringval{Intertek Norway}\texttt{,}\\
-\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{Apr 2015}\texttt{,} \stringval{Aug 2018}\texttt{),}\\
+\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{apr 2015}\texttt{,} \stringval{aug 2018}\texttt{),}\\
 \hspace{1cm}\comment{// 3 år 5 mån}\\
-\hspace{1cm}\variable{plats}\texttt{:} \stringval{Tønsberg, Norge\texttt{,}\\
+\hspace{1cm}\variable{plats}\texttt{:} \stringval{Tønsberg, Norge}\texttt{,}\\
 \hspace{1cm}\variable{typ}\texttt{:} \variable{Heltid}\texttt{,}\\
-\hspace{1cm}\comment{/* Cargo Inspektör (Oil \& Bulk) with experience in}\\
-\hspace{1cm}\comment{inspektion, mätning och verifiering av olje-}\\
-\hspace{1cm}\comment{och bulklaster. Skicklig i kvantitets- och kvalitets-}\\
-\hspace{1cm}\comment{inspektioner, provtagning, tankmätning och}\\
+\hspace{1cm}\comment{/* Lastinspektör (Olja \& Bulk) med erfarenhet av}\\
+\hspace{1cm}\comment{inspektion, mätning och verifiering av olje och}\\
+\hspace{1cm}\comment{bulklaster. Skicklig i kvantitets och}\\
+\hspace{1cm}\comment{kvalitetsinspektioner, provtagning, tankmätning och}\\
 \hspace{1cm}\comment{efterlevnad av internationella standarder. */}\\
 \hspace{0.5cm}\texttt{\}}\\
 }
@@ -340,13 +340,13 @@
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\variable{befattning}\texttt{:} \stringval{Inspektör}\texttt{,}\\
 \hspace{1cm}\variable{företag}\texttt{:} \stringval{Intertek Denmark}\texttt{,}\\
-\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{Dec 2010}\texttt{,} \stringval{Apr 2015}\texttt{),}\\
+\hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{dec 2010}\texttt{,} \stringval{apr 2015}\texttt{),}\\
 \hspace{1cm}\comment{// 4 år 5 mån}\\
-\hspace{1cm}\variable{plats}\texttt{:} \stringval{Kalundborg, Danmark\texttt{,}\\
+\hspace{1cm}\variable{plats}\texttt{:} \stringval{Kalundborg, Danmark}\texttt{,}\\
 \hspace{1cm}\variable{typ}\texttt{:} \variable{Heltid}\texttt{,}\\
-\hspace{1cm}\comment{/* Cargo Inspektör (Oil \& Bulk). Ensured safe and}\\
+\hspace{1cm}\comment{/* Lastinspektör (Olja \& Bulk). Säkerställde säkra och}\\
 \hspace{1cm}\comment{noggranna lastoperationer genom rigorösa}\\
-\hspace{1cm}\comment{inspektions- och verifieringsprocesser. */}\\
+\hspace{1cm}\comment{inspektions och verifieringsprocesser. */}\\
 \hspace{0.5cm}\texttt{\}}\\
 }
 
