update sv version

--- a/sv.tex
+++ b/sv.tex
@@ -339,7 +339,7 @@
 {
 \hspace{0.5cm}\texttt{\{}\\
 \hspace{1cm}\variable{befattning}\texttt{:} \stringval{Inspektör}\texttt{,}\\
-\hspace{1cm}\variable{företag}\texttt{:} \stringval{Intertek Denmark}\texttt{,}\\
+\hspace{1cm}\variable{företag}\texttt{:} \stringval{Intertek Danmark}\texttt{,}\\
 \hspace{1cm}\variable{varaktighet}\texttt{:} \method{Range}\texttt{(}\stringval{dec 2010}\texttt{,} \stringval{apr 2015}\texttt{),}\\
 \hspace{1cm}\comment{// 4 år 5 mån}\\
 \hspace{1cm}\variable{plats}\texttt{:} \stringval{Kalundborg, Danmark}\texttt{,}\\
