--- a/sv.tex
+++ b/sv.tex
@@ -107,7 +107,7 @@
 \raggedright
 
 % PLATFORMS
-{\keyword{var} \classname{Platforms} \texttt{=}}\\
+{\keyword{var} \classname{Plattformar} \texttt{=}}\\
 {\texttt{[]}\classname{string}}\\
 {\texttt{\{}}\\
 {\hspace{0.5cm}\stringval{Windows}\texttt{,}}\\
@@ -118,7 +118,7 @@
 \vspace{0.5cm}
 
 % PROGRAMMING
-{\keyword{var} \classname{Programming} \texttt{=}}\\
+{\keyword{var} \classname{Programmering} \texttt{=}}\\
 {\texttt{[]}\classname{string}}\\
 {\texttt{\{}}\\
 {\hspace{0.5cm}\stringval{C\#}\texttt{,} \stringval{C++}\texttt{,}}\\
@@ -134,7 +134,7 @@
 \vspace{0.5cm}
 
 % SOFTWARE
-{\keyword{var} \classname{Software} \texttt{=}}\\
+{\keyword{var} \classname{Programvara} \texttt{=}}\\
 {\texttt{[]}\classname{string}}\\
 {\texttt{\{}}\\
 {\hspace{0.5cm}\stringval{BurpSuite}\texttt{,}}\\
@@ -162,21 +162,21 @@
 \vspace{0.5cm}
 
 % LANGUAGES
-{\keyword{var} \variable{Languages} \texttt{=}}\\
+{\keyword{var} \variable{Språk} \texttt{=}}\\
 {\keyword{map}\texttt{[}\keyword{string}\texttt{]}\keyword{string}}\\
 {\texttt{\{}}\\
-{\hspace{0.5cm}\stringval{English}\texttt{:} \stringval{C1}\texttt{,}}\\
+{\hspace{0.5cm}\stringval{Engelska}\texttt{:} \stringval{C1}\texttt{,}}\\
 {\hspace{0.5cm}\comment{// Flytande}}\\
-{\hspace{0.5cm}\stringval{Swedish}\texttt{:} \stringval{B2}\texttt{,}}\\
+{\hspace{0.5cm}\stringval{Svenska}\texttt{:} \stringval{B2}\texttt{,}}\\
 {\hspace{0.5cm}\comment{// Mellannivå}}\\
-{\hspace{0.5cm}\stringval{Chinese}\texttt{:} \stringval{C2}\texttt{,}}\\
+{\hspace{0.5cm}\stringval{Kinesiska}\texttt{:} \stringval{C2}\texttt{,}}\\
 {\hspace{0.5cm}\comment{// Modersmål}}\\
 {\texttt{\}}}
 
 \vspace{0.5cm}
 
 % PROFILE
-{\keyword{var} \variable{Profile} \texttt{=}}\\
+{\keyword{var} \variable{Profil} \texttt{=}}\\
 {\texttt{[]}\keyword{string}}\\
 {\texttt{\{}}\\
 {\hspace{0.5cm}\stringval{CTF}}\\
